[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Abramov Evgeniy",email = "61637662+iriswolf@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | .venv
  | docs
  | migrations
  | __pychache__
)
'''